@startuml
title DMS - Domain Admin dan Master Configuration

skinparam classAttributeIconSize 0
hide circle

package "User & Role Configuration" {
  class User {
    displayName
    status
  }

  class Role {
    roleName
    displayLabel
  }

  class UserRole {
    assignedRole
  }

  class KetuaTimAssignment {
    activePeriod
  }
}

package "Master Data" {
  class MasterFungsi {
    namaFungsi
  }

  class MasterKegiatan {
    namaKegiatan
  }

  class MasterJenisDokumen {
    namaJenisDokumen
  }

  class MasterJenisPermintaan {
    namaJenisPermintaan
  }

  class MasterKategoriPermintaan {
    namaKategori
  }

  class MasterDetailPermintaan {
    namaDetail
  }

  class MasterKelengkapanDokumen {
    namaKelengkapan
    berlakuUntuk
  }
}

User "1" o-- "0..*" UserRole : has roles
Role "1" o-- "0..*" UserRole : assigned through
MasterFungsi "1" *-- "0..*" MasterKegiatan : kegiatan
MasterKegiatan "1" o-- "0..*" MasterJenisDokumen : jenis dokumen
MasterKegiatan "1" *-- "0..*" MasterJenisPermintaan : jenis permintaan
MasterJenisPermintaan "1" *-- "0..*" MasterKategoriPermintaan : kategori
MasterKategoriPermintaan "1" *-- "0..*" MasterDetailPermintaan : detail leaf
MasterDetailPermintaan "1" o-- "0..*" MasterKelengkapanDokumen : kelengkapan
MasterKegiatan "1" o-- "0..1" KetuaTimAssignment : active lead
KetuaTimAssignment "0..*" --> "1" User : ketua tim

note right of MasterKelengkapanDokumen
  Kelengkapan dapat berlaku untuk Ketua Tim atau Anggota.
end note

note bottom of KetuaTimAssignment
  Satu kegiatan hanya memiliki satu Ketua Tim aktif.
  Satu user dapat memimpin banyak kegiatan.
end note

note bottom
  Admin Sistem mengelola user, role, master data,
  kelengkapan, Ketua Tim, dan reset password user.
  Admin Sistem bukan aktor workflow operasional.
end note

@enduml
